# ChatGPT-Stacks

./: .gitattributes  .gitignore  README.md  README.zh-Hans.md  index.html  package.json  vite.config.js
.github/: publish.yml
.github/workflows/: main.yml
public/: chatgpt.css  chatgpt2.css
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: libsimple.dylib
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  chat.rs  common.rs  main.rs  setup.rs  tray.rs
src-tauri/src/dao/: base.rs  category.rs  chat.rs  kv.rs  mod.rs  qa.rs
src-tauri/src/js/: core.js  ui.js
src-tauri/src/model/: category.rs  kv.rs  mod.rs  qa.rs
src/api/: api.js
src/app/: app.js  file.js  html2canvas.js
src/components/: Editor.vue  Temp.Vue  Top.vue
src/language/: i18n.js
src/views/: Action.vue  Breadcrumb.vue  Category.vue  CategoryCreate.vue  CategoryUpdate.vue  Files.vue  FilesSettings.vue  I18n.vue  ImportConversations.vue  Index.vue  Info.vue  Logo.vue  Search.vue  Temp.vue  Theme.vue
