[package]
name = "chatgptstacks"
version = "1.0.0"
description = "ChatGPT-Stacks is a desktop application built with Tauri, Vue3, Naive-UI and SQLite3 that enables you to save your ChatGPT conversations directly to your local SQLite database."
authors = ["zhouyangtingwen"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
chrono = { version = "*", features = ["serde"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all", "macos-private-api", "system-tray"] }
rusqlite = { version = "0.27", features = [
  "load_extension",
  "vtab",
  "bundled",
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
